# try-axum-sqlx

./: .env.local  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
database/: schema.sql
docker/db/: Dockerfile
src/: app.rs  database.rs  main.rs  repositories.rs
src/app/: error.rs  router.rs  state.rs
src/controllers/: user.rs
src/infra/: pg.rs
src/infra/pg/: user.rs
src/interactors/: user.rs
src/interactors/pg/: user.rs
src/models/: user.rs
src/repositories/: user.rs
src/usecases/: user.rs
