[package]
name = "try-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
axum = "0.6.1"
dotenvy = "0.15.6"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
thiserror = "1.0.38"
tokio = { version = "1.22.0", features = ["full"] }
